[package]
name = "sni-router"
version = "0.1.0"
authors = ["zrah <zrah@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1.7.1",features = ["full"]}
toml = "^0.5.8"
serde = "^1"
serde_derive = "^1"
tls-parser = "0.11.0"
anyhow = "^1"
regex = "^1.5.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
